{
    "name": "New Controls",
    "maps": [
        {
            "name": "Fireball",
            "id": "19f38221-2cb0-42fd-8730-71683268876b",
            "actions": [
                {
                    "name": "New action",
                    "type": "Value",
                    "id": "50244aa6-8d62-4f75-a601-fe751d66ca4b",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerLeft",
                    "type": "Value",
                    "id": "123a14c5-db7d-4b9f-9eb4-efd4eaf7088a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerRight",
                    "type": "Value",
                    "id": "4135d167-bfc0-453a-813b-dfd377643b84",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FireLeft",
                    "type": "Button",
                    "id": "4d69ad30-31fc-4f8a-8672-d07afbd29705",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireRight",
                    "type": "Button",
                    "id": "f800cd9f-70bd-4b98-8707-cf42051e2fa4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b69fc26-127e-41ff-867e-899120a3ca33",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9286e42-c67d-4480-94b4-565fb27c7f06",
                    "path": "<XRController>{LeftHand}/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e70ead4b-c74b-4a57-a371-478a31b94228",
                    "path": "<XRController>{LeftHand}/{TriggerTouch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9b9a84c-a295-4188-a9cd-defae1e7305a",
                    "path": "<XRController>{LeftHand}/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b843c975-2a2a-4cdf-8a84-3a6e3e8480a2",
                    "path": "<XRController>{LeftHand}/{TriggerTouch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e92025a-43e5-4a1e-a2a5-edf604329a0f",
                    "path": "<XRController>{LeftHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9635cd00-0c2e-4b03-96e0-442a980d99d5",
                    "path": "<XRController>{LeftHand}/{PrimaryTouch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45523968-b8d2-4ffc-a050-1f98a0ca5335",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbc9bed3-21b0-4570-b537-b5757310c418",
                    "path": "<XRController>{RightHand}/{PrimaryTouch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}